# uartboot

./: .bazelrc  .gitattributes  .gitignore  BUILD  README.md  WORKSPACE
.github/workflows/: main.yaml
host/: BUILD.bazel  file.go  integration_typical_test.go  io.go  logic.go  main.go  metadata.go  page.go  unit_typical_test.go
mcu/: config.h  main.cpp  testing_helper.h  uartboot.cpp  uartboot.h
mcu/software_uart/: software_uart.cpp  software_uart.h
scripts/: cl1p.py  cl1p_build_buddy_invocation.sh
test/: uartboot_testing_implementations.cpp
test/component/: test_data.cpp  test_eeprom.cpp  test_flash.cpp  test_metadata.cpp
test/host/: README.md  demo.hex  demo_metadata.yaml  integration_typical_test.go  unit_typical_test.go
test/host/demo_blink/: compile.sh  demo_blink.cpp  demo_blink.hex
test/integration/: test_main.cpp  test_read_metadata_from_host_crc_mismatch.cpp  test_read_metadata_from_host_crc_ok.cpp  test_read_page_from_host.cpp  test_read_page_from_host_crc_mismatch.cpp  test_read_page_from_host_crc_ok.cpp  test_safe_read_metadata_with_one_retry.cpp  test_safe_read_metadata_with_two_retries.cpp  test_safe_read_page.cpp  test_safe_read_page_two_retries.cpp  test_safe_read_page_with_four_retries.cpp  test_safe_read_page_with_one_retry.cpp  test_safe_read_page_with_three_retries.cpp
test/integration/main/: test_main_eeprom_write_app_timestamp.cpp  test_main_multiple_pages.cpp
test/integration/metadata/: test_read_metadata_from_host_crc_ok.cpp  test_safe_read_metadata_with_one_retry.cpp
test/integration/page/: test_read_page_from_host_crc_ok.cpp  test_safe_read_page.cpp  test_safe_read_page_two_retries.cpp  test_safe_read_page_with_one_retry.cpp
test/mcu/: uartboot_testing_implementations.cpp
test/mcu/component/: test_eeprom.cpp  test_metadata.cpp
test/mcu/integration/main/: test_main_flash_one_page.cpp  test_main_multiple_pages.cpp  test_main_multiple_pages_crc_mismatch_second_page.cpp
test/mcu/integration/metadata/: test_read_metadata_from_host_crc_mismatch.cpp  test_read_metadata_from_host_crc_ok.cpp  (+2 more)
test/mcu/unit/: test_crc.cpp  test_dummies.cpp  test_flash.cpp  test_metadata.cpp
test/unit/: test_crc32.cpp  test_flash.cpp  test_metadata.cpp
(+5 files in other folders)
