load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "host_lib",
    srcs = [
        "file.go",
        "logic.go",
        "main.go",
        "page.go",
    ],
    importpath = "github.com/mihaigalos/uartboot/host",
    visibility = ["//visibility:private"],
    deps = ["@intel-hex-parser//parser:parser_lib"],
)

go_binary(
    name = "host",
    embed = [":host_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "unit_test",
    srcs = [
        "unit_typical_test.go",
    ],
    data = ["demo.hex"],
    embed = [":host_lib"],
)
