load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "host_lib",
    srcs = [
        "file.go",
        "io.go",
        "logic.go",
        "page.go",
    ],
    importpath = "github.com/mihaigalos/uartboot/host",
    visibility = ["//visibility:private"],
    deps = [
        "@go-bar//bar",
        "@go-ihex//parser:parser_lib",
        "@go-serial//serial",
    ],
)

go_binary(
    name = "host",
    srcs = [
        "main.go",
    ],
    embed = [":host_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "unit_tests",
    srcs = [
        "unit_typical_test.go",
    ],
    data = ["demo.hex"],
    embed = [":host_lib"],
)

go_test(
    name = "integration_tests",
    srcs = [
        "integration_typical_test.go",
    ],
    data = ["demo.hex"],
    embed = [":host_lib"],
)
