load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "host_lib",
    srcs = [
        "file.go",
        "io.go",
        "logic.go",
        "metadata.go",
        "page.go",
    ],
    importpath = "github.com/mihaigalos/uartboot/host",
    visibility = ["//visibility:public"],
    deps = [
        "@go-bar//bar",
        "@go-ihex//parser:parser_lib",
        "@go-serial//serial",
        "@go-yaml//:yaml",
    ],
)

go_binary(
    name = "host",
    srcs = [
        "main.go",
    ],
    embed = [":host_lib"],
    visibility = ["//visibility:public"],
)
